<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_picture"
            android:minWidth="300dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/display_geolocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/default_geolocation" />
        
       	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:orientation="horizontal" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:text="@string/text_comment" />
	
	        <EditText
	            android:id="@+id/edit_comment_input"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:lines="3"
	            android:hint="@string/add_comment_here"
	            android:inputType="textMultiLine" />
        
        </LinearLayout>

       	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:orientation="horizontal" >
	       	
	       	<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/edit_text_comment" />
	        <Button
	            android:id="@+id/add_voice_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        
        </LinearLayout>
        
       	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:orientation="horizontal" >
	       	
	       	<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/edit_scratch_comment" />

	       	<ImageView
	       	    android:id="@+id/imageView1"
	       	    android:contentDescription="@string/default_picture"
	       	    android:layout_width="wrap_content"
	       	    android:layout_height="wrap_content"
	       	    android:src="@android:drawable/ic_menu_edit" />
	        
        </LinearLayout>
        

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/edit_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/save" />

            <Button
                android:id="@+id/edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>